<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/flash_tv1"
        android:textColor="@color/indexText"
        android:textSize="@dimen/flash_index_tv"
    />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/flash_tv2"
        android:textColor="@color/indexText"
        android:textSize="@dimen/flash_index_tv2"
    />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/flash_tv3"
        android:textColor="@color/indexText"
        android:textSize="@dimen/flash_index_tv2"
    />


    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@id/ll_slogan"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"/>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageView"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flash_ll_tv1"
                    android:textColor="@color/black"
                    android:textSize="30sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flash_ll_tv2"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flash_slogan1"
            android:textColor="@color/indexText"
            android:layout_marginRight="50dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/indexText"
            android:text="@string/flash_slogan2"
        />
    </LinearLayout>


</RelativeLayout>